--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,25 @@
-node_modules
+# Logs
+logs
 *.log
-/dist/*
-!/dist/index.js
-!/dist/pnpm.js
-tmp
-temp
-*.tmp
-*.temp
-tmp.*
-temp.*
-.pnpm-store
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dev-dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
