--- a/.github/workflows/build-and-deploy-to-pages.yml
+++ b/.github/workflows/build-and-deploy-to-pages.yml
@@ -13,6 +13,10 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v4.1.1
 
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
+
       - name: Install and Build
         run: |
           pnpm install
