--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,3 +1,4 @@
 {
-  "*": "prettier --write --ignore-unknown"
+  "*": "prettier --write --ignore-unknown",
+  "*.ts, *.tsx, *.js, *.jsx": "eslint --fix --max-warnings 0"
 }
