--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "engines": {
     "node": "^20",
-    "pnpm": "^8"
+    "pnpm": "^10"
   },
   "scripts": {
     "test": "vitest run",
@@ -24,6 +24,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^7.5.0",
     "workbox-core": "^7.0.0"
   },
   "devDependencies": {
@@ -43,5 +44,6 @@
     "vite": "^4.4.5",
     "vite-plugin-pwa": "^0.16.5",
     "vitest": "^0.34.6"
-  }
+  },
+  "packageManager": "pnpm@10.8.0+sha512.0e82714d1b5b43c74610193cb20734897c1d00de89d0e18420aebc5977fa13d780a9cb05734624e81ebd81cc876cd464794850641c48b9544326b5622ca29971"
 }
